--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nikoloza/ui",
+  "name": "@nikoloza/scratch-ui",
   "version": "0.1.2",
   "description": "",
   "main": "lib/index.css",
