--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@scratch-css/ui",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "lib/index.css",
   "scripts": {
-    "start": "webpack-dev-server",
-    "dev": "webpack-dev-server --watch",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html --no-cache",
+    "build": "parcel build index.html",
+    "deploy": "yarn build && gh-pages -d dist"
   },
   "author": "",
   "license": "",
@@ -15,19 +14,19 @@
     "@scratch-css/scratch": "^1.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-preset-es2015": "^6.14.0",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.13.0",
-    "postcss-url": "^5.1.2",
-    "precss": "^1.4.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1"
+    "gh-pages": "^2.0.1",
+    "parcel-bundler": "^1.12.3",
+    "postcss-preset-env": "^6.7.0"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%"
+  ],
+  "postcss": {
+    "plugins": {
+      "postcss-preset-env": {
+        "stage": 0
+      }
+    }
   }
 }
